# pyteambook

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/: main.py
src/Document/template/: template.tex
src/FileServices/: Group.py  Lector.py
src/Models/: Models.py
src/templates/: default.tex
