[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyteambook"
version = "0.0.1"
description = "CLI tool to generate ICPC Team Reference Documents"
authors = [{name = "Jaime Sebastian Chavarria Fuertes", email = "jschavarria77@gmail.com"}]
dependencies = [
    "typer[all]",
    "jinja2",
    "pydantic"
]
requires-python = ">=3.9"

[project.scripts]
pyteambook = "src.main:app"

[tool.setuptools]
packages = ["src", "src.FileServices", "src.Models", "src.Document"]

[tool.setuptools.package-data]
"src.templates" = ["*.j2"]